# FEMA_API_Pipeline

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  servers.json
.github/workflows/: docker.yml  lint.yaml
api/: fema_client.py
conf/: conf.py  settings.py
db/: postgres.py  repositories.py
env/: .env
pipelines/: fema_pipeline.py
services/: fema_service.py  fema_transform.py
utils/: helpers.py  http.py
